--- a/treads-frontend/package.json
+++ b/treads-frontend/package.json
@@ -34,6 +34,7 @@
     "@mui/material": "^6.4.3",
     "@mui/styled-engine-sc": "^6.4.3",
     "@reduxjs/toolkit": "^2.5.0",
+    "axios": "^1.7.9",
     "js-cookie": "^3.0.5",
     "material-ui-popup-state": "^5.3.3",
     "path": "^0.12.7",
@@ -44,6 +45,8 @@
     "react-icons": "^5.4.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.1",
+    "react-spinners": "^0.15.0",
+    "recharts": "^2.15.1",
     "styled-components": "^6.1.15",
     "tailwind-scrollbar-hide": "^2.0.0"
   },
